--- a/SkajPajClientWPF/SkajPajClientWPF/App.xaml
+++ b/SkajPajClientWPF/SkajPajClientWPF/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:SkajPajClientWPF"
-             StartupUri="Views/TestRestApi.xaml">
+             StartupUri="Views/LoginWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
