Complit login and registration windows
add sha256 encryption
add signin request
add close window event

--- a/SkajPajClientWPF/SkajPajClientWPF/Views/LoginWindow.xaml
+++ b/SkajPajClientWPF/SkajPajClientWPF/Views/LoginWindow.xaml
@@ -26,11 +26,11 @@
         <StackPanel Grid.Column="1" Grid.Row="1" Orientation="Vertical">
             <Image Source="..\Images\Logo\logo.PNG" />
             <TextBlock Text="Login" TextAlignment="Center"/>
-            <TextBox Margin="80,0,80,5"/>
+            <TextBox Margin="80,0,80,5" Text="{Binding Path = LoginModel.Login, Mode = TwoWay}"/>
             <TextBlock Text="Hasło" TextAlignment="Center"/>
-            <TextBox Margin="80,0,80,10"/>
-            <Button Content="Zaloguj się" Margin="120,0,120,0" Height="30"/>
-            <Button Name="OpenRegistrationButton" Content="Zarejestruj się" Margin="120,20,120,0" Height="30" Command="{Binding OpenRegistrationWindowCommand}"/>
+            <PasswordBox Name="passwordBox" PasswordChar="•" Margin="80,0,80,10"/>
+            <Button Content="Zaloguj się" Margin="120,0,120,0" Height="30" Command="{Binding SignInCommand}" CommandParameter="{Binding ElementName=passwordBox}"/>
+            <Button Name="OpenRegistrationButton" Content="Zarejestruj się" Margin="120,20,120,0" Height="30" Command="{Binding OpenRegistrationWindowCommand}" />
         </StackPanel>
 
     </Grid>
