--- a/SkajPajClientWPF/SkajPajClientWPF/Views/MainWindow.xaml
+++ b/SkajPajClientWPF/SkajPajClientWPF/Views/MainWindow.xaml
@@ -4,9 +4,67 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SkajPajClientWPF.Views"
+        xmlns:local1="clr-namespace:SkajPajClientWPF.ViewModels"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Skajpaj" Height="450" Width="800">
+    <Window.DataContext>
+        <local1:MainViewModel/>
+    </Window.DataContext>
+
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="1*" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="100" />
+            <RowDefinition Height="20" />
+            <RowDefinition Height="1*" />
+        </Grid.RowDefinitions>
+
+        <Grid Grid.ColumnSpan="2" >
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="200" />
+                <ColumnDefinition Width="100" />
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="180" />
+            </Grid.ColumnDefinitions>
+            <Image  Source="..\Images\Logo\logo.PNG"/>
+            <Image Grid.Column="1" Source="{Binding MainModel.UserData.Avatar}" Margin="10"/>
+            <TextBlock Grid.Column="2" Text="{Binding MainModel.UserData.Login}" Margin="10,35,0,0" FontSize="30" FontFamily="arial rounded mt bold"/>
+            <Button Grid.Column="3" Command="{Binding LogOutCommand}" Content="Wyloguj się" FontSize="20" FontFamily="arial rounded mt bold" Margin="20" Background="Orange" />
+        </Grid>
+
+        <TextBlock Grid.Row="1" Text="Kontakty:" FontSize="15" FontFamily="arial rounded mt bold" Margin="10,0,0,0"/>
+
+        <ListView Grid.Column="0" Grid.Row="2" Margin="10,5,10,10">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel>
+                        <Image/>
+                        <TextBlock />
+                        <TextBlock />
+                        <Button/>
+                        <Button/>
+                    </StackPanel>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+
+        <TextBlock Grid.Column="1" Grid.Row="1" Text="Połączenia:" FontSize="15" FontFamily="arial rounded mt bold" Margin="10,0,0,0"/>
+
+        <ListView Grid.Column="1" Grid.Row="2" Margin="10,5,10,10">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel>
+                        <Image />
+                        <TextBlock />
+                        <TextBlock />
+                        <Button/>
+                        <Button/>
+                    </StackPanel>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </Grid>
 </Window>
