ListView design, List of friends and Add friends
ListView design
List of friends
Add friends
Default avatar
Add friend and call forms

--- a/SkajPajClientWPF/SkajPajClientWPF/Views/RegistrationWindow.xaml
+++ b/SkajPajClientWPF/SkajPajClientWPF/Views/RegistrationWindow.xaml
@@ -50,7 +50,7 @@
                                             Background="Transparent"
                                             Margin="2"
                                 >
-                                        <Image Source="{Binding Path=Content, RelativeSource={RelativeSource TemplatedParent}}"/>
+                                        <Image Source="{Binding Path=Content, RelativeSource={RelativeSource TemplatedParent}}" Stretch="Fill"/>
                                     </Border>
                                 </ControlTemplate>
                             </Setter.Value>
