--- a/SkajPajClientWPF/SkajPajClientWPF/Views/MainWindow.xaml
+++ b/SkajPajClientWPF/SkajPajClientWPF/Views/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:SkajPajClientWPF.Views"
         xmlns:local1="clr-namespace:SkajPajClientWPF.ViewModels"
         mc:Ignorable="d"
-        Title="Skajpaj" Height="450" Width="800">
+        Title="Skajpaj" Height="450" Width="850">
     <Window.DataContext>
         <local1:MainViewModel/>
     </Window.DataContext>
@@ -18,6 +18,7 @@
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="100" />
+            <RowDefinition Height="30" />
             <RowDefinition Height="20" />
             <RowDefinition Height="1*" />
         </Grid.RowDefinitions>
@@ -27,33 +28,44 @@
                 <ColumnDefinition Width="200" />
                 <ColumnDefinition Width="100" />
                 <ColumnDefinition Width="1*" />
-                <ColumnDefinition Width="180" />
+                <ColumnDefinition Width="150" />
+                <ColumnDefinition Width="150" />
             </Grid.ColumnDefinitions>
             <Image  Source="..\Images\Logo\logo.PNG"/>
             <Image Grid.Column="1" Source="{Binding MainModel.UserData.Avatar}" Margin="10"/>
-            <TextBlock Grid.Column="2" Text="{Binding MainModel.UserData.Login}" Margin="10,35,0,0" FontSize="30" FontFamily="arial rounded mt bold"/>
-            <Button Grid.Column="3" Command="{Binding LogOutCommand}" Content="Wyloguj się" FontSize="20" FontFamily="arial rounded mt bold" Margin="20" Background="Orange" />
+            <TextBlock Grid.Column="2" Text="{Binding MainModel.UserData.Login}" Margin="10,35,0,0" FontSize="30"/>
+            <Button Grid.Column="3" Content="Zmień hasło" FontSize="15" Margin="20" Background="Aquamarine" />
+            <Button Grid.Column="4" Command="{Binding LogOutCommand}" Content="Wyloguj się" FontSize="15" Margin="20" Background="Orange" />
         </Grid>
 
-        <TextBlock Grid.Row="1" Text="Kontakty:" FontSize="15" FontFamily="arial rounded mt bold" Margin="10,0,0,0"/>
+        <StackPanel Orientation="Horizontal" Grid.Row="1">
+            <TextBox Width="215" Margin="10,5,5,5" Text="{Binding MainModel.LoginAddFriend}" />
+            <Button Content="Dodaj do znajomych" Margin="10,5,0,5" Width="140" Background="DarkSalmon" Command="{Binding AddFriendCommand}"/>
+        </StackPanel>
 
-        <ListView Grid.Column="0" Grid.Row="2" Margin="10,5,10,10">
+        <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="1">
+            <TextBox Width="215" Margin="10,5,5,5" Text="{Binding MainModel.CallLogin}" />
+            <Button Content="Zadzwoń" Margin="10,5,0,5" Width="140" Background="Chartreuse"/>
+        </StackPanel>
+
+        <TextBlock Grid.Row="2" Text="Kontakty:" FontSize="15" Margin="10,0,0,0"/>
+
+        <ListView Grid.Row="3" Margin="10,5,10,10" ItemsSource="{Binding MainModel.FriendList}" ScrollViewer.VerticalScrollBarVisibility="Visible" >
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <StackPanel>
-                        <Image/>
-                        <TextBlock />
-                        <TextBlock />
-                        <Button/>
-                        <Button/>
+                    <StackPanel Orientation="Horizontal">
+                        <Image Width="50" Height="50" Source="{Binding Avatar}" Margin="5"/>
+                        <TextBlock Text="{Binding Login}" Margin="20,20,20,0" FontSize="18" Width="80"/>
+                        <Button Content="Usuń" Margin="15,15,0,15" Width="70" FontSize="14" Background="OrangeRed"/>
+                        <Button Content="Zadzwoń" Margin="15,15,0,15" Width="70" FontSize="14" Background="GreenYellow"/>
                     </StackPanel>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
 
-        <TextBlock Grid.Column="1" Grid.Row="1" Text="Połączenia:" FontSize="15" FontFamily="arial rounded mt bold" Margin="10,0,0,0"/>
+        <TextBlock Grid.Column="1" Grid.Row="2" Text="Połączenia:" FontSize="15" Margin="10,0,0,0"/>
 
-        <ListView Grid.Column="1" Grid.Row="2" Margin="10,5,10,10">
+        <ListView Grid.Column="1" Grid.Row="3" Margin="10,5,10,10">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <StackPanel>
