--- a/SkajPajClientWPF/SkajPajClientWPF/Views/MainWindow.xaml
+++ b/SkajPajClientWPF/SkajPajClientWPF/Views/MainWindow.xaml
@@ -34,7 +34,7 @@
             <Image  Source="..\Images\Logo\logo.PNG"/>
             <Image Grid.Column="1" Source="{Binding MainModel.UserData.Avatar}" Margin="10"/>
             <TextBlock Grid.Column="2" Text="{Binding MainModel.UserData.Login}" Margin="10,35,0,0" FontSize="30"/>
-            <Button Grid.Column="3" Content="Zmień hasło" FontSize="15" Margin="20" Background="Aquamarine" />
+            <Button Grid.Column="3" Command="{Binding ChangePasswordCommand}" Content="Zmień hasło" FontSize="15" Margin="20" Background="Aquamarine" />
             <Button Grid.Column="4" Command="{Binding LogOutCommand}" Content="Wyloguj się" FontSize="15" Margin="20" Background="Orange" />
         </Grid>
 
