--- a/SkajPajClientWPF/SkajPajClientWPF/Views/MainWindow.xaml
+++ b/SkajPajClientWPF/SkajPajClientWPF/Views/MainWindow.xaml
@@ -45,7 +45,7 @@
 
         <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="1">
             <TextBox Width="215" Margin="10,5,5,5" Text="{Binding MainModel.CallLogin}" />
-            <Button Content="Zadzwoń" Margin="10,5,0,5" Width="140" Background="Chartreuse" Click="Button_Click"/>
+            <Button Content="Zadzwoń" Margin="10,5,0,5" Width="140" Background="Chartreuse"/>
         </StackPanel>
 
         <TextBlock Grid.Row="2" Text="Kontakty:" FontSize="15" Margin="10,0,0,0"/>
@@ -76,7 +76,7 @@
                             <TextBlock Text="{Binding StartDateString}"/>
                             <TextBlock Text="{Binding Time}"/> 
                         </StackPanel>
-                        <Button Content="Zadzwoń" Background="LawnGreen" Margin="15,15,0,15" Width="70"/>
+                        <Button Content="Zadzwoń" Background="LawnGreen" Margin="15,15,0,15" Width="70"  Command="{Binding CallFriendCommand}/>
                     </StackPanel>
                 </DataTemplate>
             </ListView.ItemTemplate>
