Revert "not work now"
This reverts commit a4ab17c2329aa3d5d65da99b4800fb076e3e9cbf.

--- a/SkajPajClientWPF/SkajPajClientWPF/Views/LoginWindow.xaml
+++ b/SkajPajClientWPF/SkajPajClientWPF/Views/LoginWindow.xaml
@@ -28,7 +28,7 @@
             <TextBlock Text="Login" TextAlignment="Center"/>
             <TextBox Margin="80,0,80,5" Text="{Binding Path = LoginModel.Login, Mode = TwoWay}"/>
             <TextBlock Text="Hasło" TextAlignment="Center"/>
-            <PasswordBox Name="passwordBox" PasswordChar="•" Margin="80,0,80,10" Password=""/>
+            <PasswordBox Name="passwordBox" PasswordChar="•" Margin="80,0,80,10" Password="testtest"/>
             <Button Content="Zaloguj się" Margin="120,0,120,0" Height="30" Command="{Binding SignInCommand}" CommandParameter="{Binding ElementName=passwordBox}"/>
             <Button Name="OpenRegistrationButton" Content="Zarejestruj się" Margin="120,20,120,0" Height="30" Command="{Binding OpenRegistrationWindowCommand}" />
         </StackPanel>
